test/arrays/deitz/part7/test_error_stride_range.good
test_error_stride_range.chpl:4: error: assigning to a range with strideKind.one from a range with strideKind.positive without an explicit cast
