test/arrays/deitz/part7/test_error_stride_range.chpl
var r : simpleRange; /*autofix*/
r = 1..5;
for i in r do writeln(i);
r = 1..5 by 2;
for i in r do writeln(i);
